[package]
name = "altredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bytes = "1.5.0"
once_cell = "1.19.0"
thiserror = "1.0.56"
tokio = { version = "1.23.0", features = ["full"] }
